--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "mongo-repo-type",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@nestjs/common": "^5.7.3",
+    "mongodb": "^3.1.13",
+    "nestjs": "0.0.1"
+  }
 }
