--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
     "compilerOptions": {
-      "module": "commonjs",
-      "declaration": true,
-      "removeComments": true,
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "target": "es6",
-      "sourceMap": false,
-      "lib": ["es2018"],
-      "outDir": "./dist",
-    }
-  }
-   
+        "module": "commonjs",
+        "declaration": true,
+        "removeComments": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "target": "es6",
+        "sourceMap": false,
+        "lib": [
+            "es2018"
+        ],
+        "outDir": "./dist"
+    },
+    "exclude": [
+        "node_modules",
+    ]
+}
