--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "mongo-nest",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types" : "dist/index.d.ts",
   "scripts": {
     "build": "rd /s /q  dist && tsc -p tsconfig.json",
     "prepare": "npm run build"
